# phylon

./: .clippy.toml  .gitignore  BEVY_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  MANUAL_TESTING.md  PHASE 7.md  PHASE 8.md  PHASE3_ROADMAP.md  PHASE4_EPIC1_NEURAL_ROADMAP.md  PHASE4_EPIC4_MORPHOGEN_ROADMAP.md  PHASE4_EPIC9_3D_READINESS.md  PHASE4_ROADMAP.md  PHASE5_SX_ROADMAP.md  PHASE5_SX_STATUS.md  PHASE6_RESEARCH_PLATFORM_ROADMAP.md  PHASE7_WORKBENCH_ROADMAP.md  PHASE8_NATIVE_3D_ENGINE_ROADMAP.md  README.md  UI_IMPLEMENTATION_STATUS.md  UI_PHASE2_ROADMAP.md  rustfmt.toml  skill.md  snapshot_3600.ron  snapshot_7200.ron  temp_sim.txt
.claude/: settings.json
.github/workflows/: ci.yml
crates/analytics/: Cargo.toml
crates/analytics/src/: export.rs  graph.rs  lib.rs
crates/app/: Cargo.toml
crates/app/src/: analytics_bridge.rs  app.rs  batch.rs  behavior_validation.rs  biology_profiler.rs  camera.rs  capture.rs  commands.rs  events.rs  gpu_init.rs  interventions.rs  learning_bridge.rs  main.rs  metrics_plot.rs  motion_diagnostic.rs  plugins.rs  preferences.rs  render.rs  replay.rs  scripting.rs  selection.rs  simulation.rs  simulation.rs.tmp.17164.529ff16067d0  species_seed.rs  systems.rs  winit_test.rs
crates/app/src/render/: organism_visuals.rs  world_instances.rs
crates/app/src/ui/: graph.rs  mod.rs
crates/behavior/: Cargo.toml
crates/behavior/src/: lib.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: foraging_scaling.rs  metabolism_parallel.rs  physics_broad_phase.rs  scheduler_throughput.rs
crates/benchmarks/src/: lib.rs
crates/brain/: Cargo.toml
crates/brain/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/diffusion/: Cargo.toml
crates/diffusion/src/: lib.rs
crates/ecology/: Cargo.toml
crates/ecology/src/: catastrophe.rs  components.rs  disease.rs  fungi.rs  lib.rs  tests.rs
crates/ecology/src/systems/: catastrophe_system.rs  corpse_decay.rs  food_spawner.rs  foraging.rs  mod.rs  photosynthesis.rs  resource_grids.rs
crates/environment/: Cargo.toml
crates/environment/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: lib.rs
crates/genetics/: Cargo.toml
crates/genetics/examples/: test_cppn.rs
crates/genetics/src/: cppn.rs  develop.rs  genome.rs  hox.rs  lib.rs  morphogen.rs  regulatory.rs  types.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: brain.wgsl  brain_pipeline.rs  compute.rs  diffusion_pipeline.rs  diffusion_step.wgsl  lib.rs  muscle.rs  muscle_actuation.wgsl  physics.wgsl  physics_pipeline.rs
crates/learning/: Cargo.toml
crates/metabolism/: Cargo.toml
crates/metabolism/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/organisms/: Cargo.toml
crates/organisms/src/: brain_wiring.rs  components.rs  developmental_graph.rs  endocrine.rs  immune.rs  lib.rs  life_cycle.rs  morphogen_field.rs  plasticity.rs  quorum.rs  sandbox.rs  social.rs  spawning.rs  systems.rs  transport.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  lib.rs  manager.rs
crates/rendering/: Cargo.toml
crates/rendering/src/: capsule.wgsl  capsule_mesh.rs  debug.rs  debug_quad.wgsl  field.rs  field_overlay.wgsl  field_pass.rs  food_pass.rs  instance_buffer.rs  lib.rs  organism.rs  organism_pass.rs  picking.rs  post_pass.rs  sdf_accum.wgsl  sdf_composite.wgsl  sdf_highlight.wgsl  sdf_skin.rs  splat_compute.wgsl  trail_pass.rs
crates/reproduction/: Cargo.toml
crates/reproduction/src/: lib.rs
crates/research/: Cargo.toml
crates/research/src/: lib.rs  main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/selection/: Cargo.toml
crates/sensing/: Cargo.toml
crates/sensing/src/: lib.rs
crates/spatial/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  lib.rs  replay.rs  snapshot.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: camera.rs  commands.rs  dummy.txt  frame_animation.rs  graph_canvas.rs  layout.rs  lib.rs  menu.rs  modal.rs  overlay.rs  recent_items.rs  regulatory_view.rs  render.rs  shortcuts.rs  state.rs  theme.rs  timeline.rs  types.rs  utils.rs  viewport_input.rs  widgets.rs  workspace.rs
crates/ui/src/components/: empty_state.rs  mod.rs  section_header.rs  stat_bar.rs  tab_strip.rs
crates/ui/src/overlays/: camera_controls.rs  context_menu.rs  mod.rs  search_bar.rs
crates/ui/src/panels/: analytics.rs  brain_inspector.rs  entity_inspector.rs  genome_inspector.rs  mod.rs  research.rs  system_logs.rs  timeline.rs
crates/ui/src/plugins/: circulation_viewer.rs  command_palette.rs  dialogs.rs  event_log.rs  evolution_debugger.rs  gizmos.rs  global_search.rs  grn_viewer.rs  hormone_viewer.rs  hox_visualizer.rs  immune_viewer.rs  inspector.rs  lineage_viewer.rs  menu.rs  metrics.rs  mod.rs  navigation.rs  neural_viewer.rs  organism_panel_common.rs  physiology_viewer.rs  replay_browser.rs  research_dashboard.rs  sidebar.rs  status_bar.rs  toolbar.rs  viewport.rs  workspace_manager.rs
crates/ui/src/widgets/: button.rs  checkbox.rs  collapsible.rs  dropdown.rs  mod.rs  radio.rs  scroll_view.rs  slider.rs  toggle.rs
crates/ui/src/zones/: control_bar.rs  left_panel.rs  mod.rs  right_panel.rs  status_bar.rs  system_bar.rs
crates/workbench/: Cargo.toml
crates/workbench/src/: event_log.rs  events.rs  inspector.rs  layout.rs  lib.rs  menubar.rs  metrics.rs  navigation_rail.rs  sidebar.rs  status_bar.rs  toolbar.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  snapshot.rs
data/: default.ron  preferences.ron  runs.db
docs/: 01_architecture.md  02_crate_dependency_graph.md  03_directory_tree.md  04_simulation_model.md  05_physics_and_diffusion.md  06_cpu_gpu_split.md  07_gpu_determinism_policy.md  08_roadmap_milestones.md  09_phase0_implementation_plan.md  09_ui_application_shell.md  biology_reference.md  index.md
(+68 files in other folders)
