[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
common = { path = "crates/common" }
phylon_config = { path = "crates/config" }
events = { path = "crates/events" }
scheduler = { path = "crates/scheduler" }
world = { path = "crates/world" }
spatial = { path = "crates/spatial" }
physics = { path = "crates/physics" }
rendering = { path = "crates/rendering" }
gpu = { path = "crates/gpu" }
diffusion = { path = "crates/diffusion" }
organisms = { path = "crates/organisms" }
genetics = { path = "crates/genetics" }
reproduction = { path = "crates/reproduction" }
metabolism = { path = "crates/metabolism" }
ecology = { path = "crates/ecology" }
sensing = { path = "crates/sensing" }
brain = { path = "crates/brain" }
behavior = { path = "crates/behavior" }
wgpu = "22.1"
winit = "0.30"
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
egui_plot = "0.29.0"
hecs = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ron = "0.8"
config = "0.14"
rand = "0.8"
rand_chacha = "0.3"
rustc-hash = "1.1"
crossbeam = "0.8"
tokio = { version = "1.39", features = ["full"] }
glam = { version = "0.28", features = ["serde"] }
ndarray = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
puffin = "0.19"
thiserror = "1.0"
anyhow = "1.0"
rhai = "1.19"
pollster = "0.3"
bytemuck = { version = "1.18", features = ["derive"] }
noise = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
