[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/config",
    "crates/events",
    "crates/scheduler",
    "crates/world",
    "crates/spatial",
    "crates/physics",
    "crates/diffusion",
    "crates/organisms",
    "crates/genetics",
    "crates/evolution",
    "crates/reproduction",
    "crates/behavior",
    "crates/metabolism",
    "crates/sensing",
    "crates/brain",
    "crates/learning",
    "crates/environment",
    "crates/ecology",
    "crates/gpu",
    "crates/rendering",
    "crates/ui",
    "crates/analytics",
    "crates/storage",
    "crates/research",
    "crates/network",
    "crates/plugins",
    "crates/tests",
    "crates/benchmarks",
    "crates/app",
]

[workspace.dependencies]
# --- Internal crates ---
common      = { path = "crates/common" }
config      = { path = "crates/config" }
events      = { path = "crates/events" }
scheduler   = { path = "crates/scheduler" }
world       = { path = "crates/world" }
spatial     = { path = "crates/spatial" }
physics     = { path = "crates/physics" }
diffusion   = { path = "crates/diffusion" }
organisms   = { path = "crates/organisms" }
genetics    = { path = "crates/genetics" }
reproduction = { path = "crates/reproduction" }
metabolism  = { path = "crates/metabolism" }
sensing     = { path = "crates/sensing" }
brain       = { path = "crates/brain" }
ecology     = { path = "crates/ecology" }
gpu         = { path = "crates/gpu" }
rendering   = { path = "crates/rendering" }
ui          = { path = "crates/ui" }
analytics   = { path = "crates/analytics" }

# --- Math ---
glam        = { version = "0.29", features = ["serde"] }

# --- Serialization ---
serde       = { version = "1", features = ["derive"] }
bincode     = { version = "1" }
ron         = { version = "0.8" }

# --- Error handling ---
thiserror   = { version = "2" }
anyhow      = { version = "1" }

# --- Randomness ---
rand        = { version = "0.8" }
rand_chacha = { version = "0.3" }
crossbeam   = { version = "0.8" }

# --- Parallelism ---
rayon       = { version = "1.10" }

# --- GPU / Windowing ---
wgpu        = { version = "22" }
winit       = { version = "0.30" }
bytemuck    = { version = "1.15", features = ["derive"] }

# --- GUI ---
egui        = { version = "0.29" }
egui-wgpu   = { version = "0.29" }
egui-winit  = { version = "0.29" }
egui_plot   = { version = "0.29" }
egui_tiles  = { version = "0.10" }
rfd         = { version = "0.14" }

# --- Logging / Profiling ---
tracing             = { version = "0.1" }
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# --- ECS ---
bevy_ecs    = { version = "0.14" }

# --- Benchmarks ---
criterion   = { version = "0.5", features = ["html_reports"] }

# --- Async / Network ---
tokio       = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26" }
futures-util = { version = "0.3" }

# --- Image encoding (screenshots / recordings) ---
image       = { version = "0.25", default-features = false, features = ["png", "gif"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
