[package]
name = "analytics"
version = "0.1.0"
edition = "2021"
description = "Metrics collection, population history, diversity indices, heatmaps, and lineage tracking."

[dependencies]
common    = { workspace = true }
events    = { workspace = true }
world     = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
wgpu      = { workspace = true }
egui      = { workspace = true }
egui_plot = { workspace = true }
bevy_ecs  = { workspace = true }
