[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "Phylon application binary: winit event loop, wgpu surface, and tick orchestration."

[[bin]]
name = "phylon"
path = "src/main.rs"

[dependencies]
# Internal
common    = { workspace = true }
config    = { workspace = true }
events    = { workspace = true }
scheduler = { workspace = true }
world     = { workspace = true }
physics    = { workspace = true }
sensing    = { path = "../sensing" }
behavior   = { path = "../behavior" }
brain      = { workspace = true }
rendering = { workspace = true }
gpu       = { workspace = true }
genetics  = { workspace = true }
evolution = { version = "0.1.0", path = "../evolution" }
organisms = { workspace = true }
diffusion = { workspace = true }
metabolism = { workspace = true }
ecology    = { workspace = true }
reproduction = { workspace = true }
ui         = { workspace = true }
storage    = { path = "../storage" }
analytics  = { workspace = true }

# GUI
egui       = { workspace = true }
egui-wgpu  = { workspace = true }
egui-winit = { workspace = true }

# ECS
bevy_ecs  = { workspace = true }

# Windowing & GPU
winit = { workspace = true }
wgpu  = { workspace = true }

# Logging
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

# Error handling (app layer uses anyhow)
anyhow = { workspace = true }

# Async block-on helper for wgpu initialization
pollster = "0.3"
egui-remixicon = "0.29.1"
environment = { version = "0.1.0", path = "../environment" }
network = { path = "../network" }

# Async runtime
tokio = { workspace = true }
