[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "Phylon application binary: winit event loop, wgpu surface, and tick orchestration."

[[bin]]
name = "phylon"
path = "src/main.rs"

[dependencies]
# Internal
common    = { workspace = true }
config    = { workspace = true }
events    = { workspace = true }
scheduler = { workspace = true }
world     = { workspace = true }
physics    = { workspace = true }
sensing    = { path = "../sensing" }
behavior   = { path = "../behavior" }
brain      = { workspace = true }
rendering = { workspace = true }
gpu       = { workspace = true }
genetics  = { workspace = true }
evolution = { version = "0.1.0", path = "../evolution" }
organisms = { workspace = true }
diffusion = { workspace = true }
metabolism = { workspace = true }
ecology    = { workspace = true }
reproduction = { workspace = true }
workbench  = { workspace = true }
ui         = { workspace = true }
storage    = { path = "../storage" }
analytics  = { workspace = true }

# GUI

# ECS
bevy  = { workspace = true }
bevy_ecs = { workspace = true }

# GPU
wgpu  = { workspace = true }

# Logging
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true, features = ["json"] }

# Error handling (app layer uses anyhow)
anyhow = { workspace = true }

# Async block-on helper for wgpu initialization
pollster = "0.3"
environment = { version = "0.1.0", path = "../environment" }
network = { path = "../network" }

# Async runtime
tokio = { workspace = true }
rand = { workspace = true }
sysinfo = "0.39.3"
crossbeam-channel = "0.5.15"
bytemuck = { workspace = true }
tracing-appender = "0.2.5"
bevy_vector_shapes = "0.13.0"
