[package]
name = "behavior"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
brain = { workspace = true }
physics = { workspace = true }
organisms = { workspace = true }
genetics = { workspace = true }
hecs = { workspace = true }
puffin = { workspace = true }
serde = { workspace = true }
