[package]
name = "behavior"
version = "0.1.0"
edition = "2021"
description = "Movement, action selection, locomotion, and motor output systems."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
thiserror = { workspace = true }
bevy_ecs  = { workspace = true }
sensing   = { path = "../sensing" }
brain     = { path = "../brain" }
physics   = { path = "../physics" }
environment = { version = "0.1.0", path = "../environment" }
diffusion   = { path = "../diffusion" }
metabolism  = { path = "../metabolism" }
config      = { path = "../config" }
