[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
description = "criterion benchmark harness for Phylon subsystems."

[dependencies]
common     = { workspace = true }
config     = { workspace = true }
scheduler  = { workspace = true }
metabolism = { workspace = true }
physics    = { workspace = true }
ecology    = { workspace = true }
events     = { workspace = true }
bevy_ecs   = { workspace = true }
rayon      = { workspace = true }
gpu        = { workspace = true }
wgpu       = { workspace = true }
bytemuck   = { workspace = true }
pollster   = "0.3"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "scheduler_throughput"
harness = false

[[bench]]
name = "metabolism_parallel"
harness = false

[[bench]]
name = "foraging_scaling"
harness = false

[[bench]]
name = "physics_broad_phase"
harness = false
