[package]
name = "brain"
version = "0.1.0"
edition = "2021"
description = "Neural substrate: NEAT topology, CTRNN, Hebbian plasticity, neuromodulators."

[dependencies]
common    = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
bytemuck  = { workspace = true }
bevy_ecs  = { workspace = true }
