[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Shared types, entity IDs, math newtypes, and error base traits for Phylon."

[dependencies]
glam  = { workspace = true }
serde = { workspace = true }
bevy_ecs = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
