[package]
name = "diffusion"
version = "0.1.0"
edition = "2021"
description = "Continuous field simulation: chemical and atmospheric field diffusion via discrete Laplacian."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
spatial   = { workspace = true }
bevy_ecs  = { workspace = true }
