[package]
name = "ecology"
version = "0.1.0"
edition = "2021"
description = "Food chain, predation, disease spread, fungi networks, and decomposition."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
events    = { workspace = true }
thiserror  = { workspace = true }
bevy_ecs   = { workspace = true }
physics    = { workspace = true }
metabolism = { workspace = true }
fastrand   = "2.3"
