[package]
name = "ecology"
version = "0.1.0"
edition = "2021"
description = "Food chain, predation, disease spread, fungi networks, and decomposition."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
events    = { workspace = true }
spatial   = { workspace = true }
thiserror  = { workspace = true }
bevy_ecs   = { workspace = true }
physics    = { workspace = true }
metabolism = { workspace = true }
fastrand   = "2.3"
rand       = { workspace = true }
serde      = { workspace = true }
environment = { version = "0.1.0", path = "../environment" }
diffusion   = { version = "0.1.0", path = "../diffusion" }

[dev-dependencies]
rand_chacha = { workspace = true }
