[package]
name = "environment"
version = "0.1.0"
edition = "2021"
description = "Terrain, biomes, climate, weather, seasons, and gas cycle management."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
spatial   = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
noise = "0.9.0"
bevy_ecs.workspace = true
