[package]
name = "events"
version = "0.1.0"
edition = "2021"
description = "Typed event bus for cross-crate simulation event dispatch in Phylon."

[dependencies]
common    = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
bevy_ecs  = { workspace = true }
