[package]
name = "evolution"
version = "0.1.0"
edition = "2021"
description = "Selection, speciation, lineage tracking, fitness, and hybridization."

[dependencies]
common    = { workspace = true }
genetics  = { workspace = true }
world     = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
bevy_ecs  = { workspace = true }

[dev-dependencies]
brain       = { path = "../brain" }
rand        = { workspace = true }
rand_chacha = { workspace = true }
