[package]
name = "genetics"
version = "0.1.0"
edition = "2021"
description = "Genome representation, mutation operators, crossover, and epigenetics."

[dependencies]
common    = { workspace = true }
serde     = { workspace = true }
rand      = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
brain     = { path = "../brain" }
