[package]
name = "gpu"
version = "0.1.0"
edition = "2021"
description = "wgpu device and queue management, compute pipeline registry, and staging buffer pool."

[dependencies]
common    = { workspace = true }
wgpu      = { workspace = true }
thiserror = { workspace = true }
bytemuck  = { workspace = true }

[dev-dependencies]
pollster = "0.3"
