[package]
name = "metabolism"
version = "0.1.0"
edition = "2021"
description = "Energy management, ageing, respiration, starvation, and hunger systems."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
thiserror = { workspace = true }
bevy_ecs  = { workspace = true }
