[package]
name = "network"
version = "0.1.0"
edition = "2021"
description = "Remote control WebSocket server and collaboration session management."

[dependencies]
common    = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde.workspace = true
serde_json = "1.0.150"
tracing.workspace = true
