[package]
name = "physics"
version = "0.1.0"
edition = "2021"
description = "Particle-spring soft body physics, collision detection, and force integration."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
spatial   = { workspace = true }
thiserror = { workspace = true }
