[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
world = { workspace = true }
physics = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
puffin = { workspace = true }
hecs = { workspace = true }
