[package]
name = "rendering"
version = "0.1.0"
edition = "2021"
description = "wgpu render pipeline, scene graph, debug renderer, and visual overlays."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
gpu       = { workspace = true }
wgpu      = { workspace = true }
thiserror = { workspace = true }
