[package]
name = "reproduction"
version = "0.1.0"
edition = "2021"
description = "Reproduction strategies, birth events, offspring dispersal, and malformed offspring handling."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
genetics  = { workspace = true }
events    = { workspace = true }
spatial   = { workspace = true }
thiserror  = { workspace = true }
bevy_ecs   = { workspace = true }
physics    = { workspace = true }
metabolism = { workspace = true }
ecology    = { workspace = true }
rand       = { workspace = true }
