[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Experiment manager, scenario authoring, batch run orchestration, and report generation."

[dependencies]
common    = { workspace = true }
config    = { workspace = true }
scheduler = { workspace = true }
thiserror = { workspace = true }
