[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
events = { workspace = true }
world = { workspace = true }
physics = { workspace = true }
tracing = { workspace = true }
puffin = { workspace = true }
organisms = { workspace = true }
genetics = { workspace = true }
reproduction = { workspace = true }
metabolism = { workspace = true }
ecology = { workspace = true }
phylon_config = { workspace = true }
hecs = { workspace = true }
