[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
description = "Fixed-tick deterministic scheduler and system ordering for Phylon."

[dependencies]
common    = { workspace = true }
events    = { workspace = true }
config    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
