[package]
name = "sensing"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
spatial = { workspace = true }
organisms = { workspace = true }
physics = { workspace = true }
genetics = { workspace = true }
hecs = { workspace = true }
puffin = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
