[package]
name = "sensing"
version = "0.1.0"
edition = "2021"
description = "All sensor modalities: vision, olfaction, hearing, touch, thermoreception, and more."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
spatial   = { workspace = true }
thiserror = { workspace = true }
bevy_ecs  = { workspace = true }
physics   = { path = "../physics" }
metabolism = { path = "../metabolism" }
diffusion = { path = "../diffusion" }
ecology   = { workspace = true }
environment = { path = "../environment" }
