[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Save/load, snapshots, replay capture and playback, dataset export, and SQLite persistence."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
serde     = { workspace = true }
bincode   = { workspace = true }
thiserror = { workspace = true }
