[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Save/load, snapshots, replay capture and playback, dataset export, and SQLite persistence."

[dependencies]
common    = { workspace = true }
world     = { workspace = true }
serde     = { workspace = true }
bincode   = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4.45"
ecology.workspace = true
genetics.workspace = true
brain.workspace = true
physics.workspace = true
bevy_ecs.workspace = true
organisms.workspace = true
reproduction.workspace = true
