[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "egui-based research interface: inspector panels, analytics, controls, and charts."

[dependencies]
common     = { workspace = true }
events     = { workspace = true }
thiserror  = { workspace = true }
bevy       = { workspace = true }
bevy_ecs   = { workspace = true }
genetics   = { workspace = true }
physics    = { workspace = true }
organisms  = { workspace = true }
brain      = { workspace = true }
metabolism = { workspace = true }
reproduction = { workspace = true }
analytics  = { workspace = true }
world      = { workspace = true }
sensing    = { workspace = true }
ecology = { version = "0.1.0", path = "../ecology" }
evolution = { version = "0.1.0", path = "../evolution" }
sysinfo = "0.39.3"
