[package]
name = "workbench"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_ecs = { workspace = true }
common = { workspace = true }
organisms = { workspace = true }
ecology = { workspace = true }
diffusion = { workspace = true }
events = { workspace = true }
selection = { workspace = true }
analytics = { workspace = true }
