[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
events = { workspace = true }
ron = "0.8"
serde = { workspace = true }
anyhow = { workspace = true }
organisms = { workspace = true }
genetics = { workspace = true }
sensing = { workspace = true }
brain = { workspace = true }
spatial = { workspace = true }
physics = { workspace = true }
hecs = { workspace = true }
glam = { workspace = true }
puffin = { workspace = true }
