[package]
name = "world"
version = "0.1.0"
edition = "2021"
description = "World state, entity registry, graph model, and snapshot coordination for Phylon."

[dependencies]
common    = { workspace = true }
events    = { workspace = true }
spatial   = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
